traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:9: error: type mismatch;
 found   : Unit
 required: Boolean
    if(y=9){
        ^